# companyproject

./: README.md  pyproject.toml  query.sql
company/: db.sqlite3
company/company/: settings.py  urls.py
company/department/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
company/department/migrations/: 0001_initial.py  0002_alter_employee_options_rename_id_employee_emp_id.py
docs/: assessment.txt
